# with-pydantic-ai

./: README.md  next.config.ts  package.json  tsconfig.json  vitest.config.ts
agent/: README.md  agent.py  env_example.txt  pyproject.toml  requirements.txt  test_agent.py
agent/tests/: test_agent.py
copilotkit_reference/CopilotKit/examples/next-openai/src/app/: layout.tsx  page.tsx  utils.ts
copilotkit_reference/CopilotKit/examples/next-openai/src/lib/: dynamic-service-adapter.ts
copilotkit_reference/CopilotKit/examples/next-pages-router/pages/: _app.tsx  _document.tsx  index.tsx
copilotkit_reference/CopilotKit/examples/next-pages-router/pages/api/: hello.ts
copilotkit_reference/examples/coagents-ai-researcher/: README.md
copilotkit_reference/examples/coagents-ai-researcher/agent/: pyproject.toml
copilotkit_reference/examples/coagents-ai-researcher/ui/app/: page.tsx
copilotkit_reference/examples/copilot-state-machine/src/app/: layout.tsx
scripts/: run-agent.bat  run-agent.sh  setup-agent.bat  setup-agent.sh
src/__tests__/app/: layout.test.tsx  page.test.tsx
src/__tests__/app/api/copilotkit/: route.test.ts
src/__tests__/components/: moon.test.tsx  proverbs.test.tsx  weather.test.tsx
src/__tests__/lib/: types.test.ts
src/app/: Main.tsx  globals.css  layout.tsx  page.tsx
src/app/api/copilotkit/: route.ts
src/app/research/: page.tsx
src/components/: AgentProgressSidebar.tsx  ChatInterface.tsx  NewResearchInterface.tsx  Progress.tsx  ResearchCanvas.tsx
src/lib/: types.ts
(+26 files in other folders)
